--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,12 +1,25 @@
-
 ---
 layout: default
 ---
 
+<div class="header">
+    <h1><a href="/">{{ site.name }}</a></h1>
+    <ul>
+        {% for item in site.data.navigation %}
+        <li>
+            <a href="{{ item.url }}">{{ item.title }}</a>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+
 <div class="about">
-    <a class="about__back" href="/">&#60;-- home</a>
-    <h1 class="about__title">Me</h1>
+    <h1 class="about__title">Portfolio</h1>
     <div class="about__content">
         {{ content }}
     </div>
+</div>
+
+<div class="footer">
+    <p>&copy; 2017 <a href="http://erictreacy.me">Eric Treacy</a>, unless otherwise noted.</p>
 </div>
