--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,11 @@
 
 <head>
     <title>Niranjan's Blog<title>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
      <meta name="twitter:card" content="summary"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
 
     {% if page.title %}
         <title>{{ page.title }}</title>
