--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,9 @@
 <html>
 
 <head>
-    <title>Niranjan's Blog<title>
-    <meta charset="utf-8"/>
-     <meta name="twitter:card" content="summary"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>Niranjan's Blog</title>
+    <meta charset="utf-8"/>    
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
 
